# DensityEQGNN

./: .gitignore  README.md  environment-win64.lock.yml  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml  materials_project.yaml  nmc.yaml  qm9.yaml
docs/: benchmarks.md  method.md
scripts/: create_synthetic_dataset.py  prepare_all_benchmarks.py  prepare_chgcar_dataset.py  prepare_mp_full.sh  prepare_mp_test.sh  run_mp_full.sbatch
src/density_eqgnn/: __init__.py
src/density_eqgnn/data/: __init__.py  chgcar.py  npz_dataset.py  sampling.py
src/density_eqgnn/models/: __init__.py  decoder.py  density_encoder.py  eqgnn.py  geometry.py  heads.py  layers.py  model.py  radial.py
src/density_eqgnn/training/: config.py  evaluate.py  losses.py  metrics.py  train.py
tests/: test_sampling.py
